# yambs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build_all_tests.sh  install_rsmake.sh  mmk_optional_arg_prop.txt  refactor.txt  regression_tests.sh  todo.txt
.github/workflows/: deploy.yml  release.yml
builder/: Cargo.toml
builder/src/: clean.rs  filter.rs  lib.rs  lib_test.rs  make.rs
cli/: Cargo.toml
cli/src/: command_line.rs
crates/builder/: Cargo.toml
crates/builder/src/: lib.rs  make.rs
crates/cli/src/: build_configurations.rs  command_line.rs  lib.rs
crates/dependency/src/: dependency_accessor.rs  dependency_registry.rs  lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/generator/: Cargo.toml
crates/generator/src/: generator.rs  include_file_generator.rs  include_file_generator_test.rs  lib.rs  lib_test.rs
crates/mmk_parser/src/: lib.rs
crates/rsmake/: cache.rs  compiler.rs  errors.rs  main.rs  output.rs  unwrap_or_terminate.rs
crates/rsmake/builder/: make.rs  mod.rs  mod_test.rs
crates/rsmake/cli/: build_configurations.rs  command_line.rs
crates/rsmake/dependency/: associated_files.rs  dependency_accessor.rs  dependency_registry.rs  dependency_state.rs  include_directories.rs  mod.rs  mod_test.rs
crates/rsmake/generator/: generator.rs  generator_mock.rs  include_file_generator.rs  include_file_generator_test.rs  mod.rs  mod_test.rs
crates/rsmake/mmk_parser/: keyword.rs  mmk_constants.rs  mod.rs  mod_test.rs
crates/rsmake/utility/: mod.rs  mod_test.rs  shell.rs
crates/utility/: Cargo.toml
crates/utility/src/: lib.rs
dependency/: Cargo.toml
dependency/src/: dependency_accessor.rs  dependency_registry.rs  lib.rs  lib_test.rs
dmake/: command_line.rs  main.rs  unwrap_or_terminate.rs
docs/: executable.md  library.md
error/: Cargo.toml
error/src/: lib.rs
examples/: header_only_dependency.md  one_dependency.md  pkg_congig_dependency.md  prebuilt_dependency.md
generator/: Cargo.toml
generator/src/: generator.rs  generator_mock.rs  include_file_generator.rs  include_file_generator_test.rs  lib.rs  lib_test.rs  sanitizer.rs
include/: debug.mk  default_make.mk  release.mk  strict.mk  strict.ng
mmk_parser/: Cargo.toml
mmk_parser/src/: keyword.rs  lib.rs  lib_test.rs  mmk_constants.rs  mmk_constants_test.rs  mmk_file_reader.rs  test.mmk  toolchain.rs  toolchain_test.rs
rsmake/: command_line.rs  main.rs
scripts/: install_rsmake.sh  regression_tests.sh
src/: cache.rs  command_line.rs  compiler.rs  errors.rs  flags.rs  lib.rs  logger.rs  main.rs  manifest.rs  output.rs  progress.rs  targets.rs  toolchain.rs  unwrap_or_terminate.rs
src/build_state_machine/: executor.rs  filter.rs  make.rs  mod.rs  mod_test.rs
src/build_target/: associated_files.rs  include_directories.rs  mod.rs  mod_test.rs  pkg_config.rs  target_registry.rs
src/builder/: mod.rs
src/cli/: build_configurations.rs  command_line.rs  configurations.rs  mod.rs
src/dependency/: associated_files.rs  dependency_registry.rs  dependency_state.rs  include_directories.rs  mod.rs  mod_test.rs
src/generator/: generator.rs  include_file_generator.rs  include_file_generator_test.rs  makefilegenerator.rs  mod.rs  mod_test.rs
src/generator/makefile/: include_file_generator.rs  make.rs  mod.rs
src/mmk_parser/: mmk_constants.rs  mod.rs  mod_test.rs
src/output/: filter.rs  mod.rs
src/parser/: #mod.rs#  .#mod.rs  constants.rs  constants_test.rs  keywords.rs  mod.rs  preprocessor.rs  targets.rs  types.rs
src/utility/: mod.rs  mod_test.rs  shell.rs
test_project/: run.mmk
test_project/src/: test.cpp
utility/: Cargo.toml
utility/src/: lib.rs  lib_test.rs
