[package]
name = "rsmake"
version = "0.1.0"
authors = ["Fredrik Sandhei <fredrik.sandhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
   "crates/cli",
   "crates/builder",
   "crates/mmk_parser",
   "crates/generator",
   "crates/external",
   "crates/error"
]

[[bin]]
name = "rsmake"
bench = false
path  = "crates/rsmake/main.rs"

[dependencies]
builder = { path = 'crates/builder/' }
cli = { path = 'crates/cli' }
mmk_parser = { path = 'crates/mmk_parser/' }
generator = { path = 'crates/generator/' }
external = { path = 'crates/external/' }
error    = { path = 'crates/error/' }

colored = "2.0.0"
structopt = "0.3"
regex = "1.0"
lazy_static = "1.4"
thiserror = "1.0.29"
