[package]
name = "rsmake"
version = "0.1.0"
authors = ["Fredrik Sandhei <fredrik.sandhei@gmail.com>"]
edition = "2018"
description = "RsMake is a command-line based build system for C++."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rsmake"
bench = false
path  = "crates/rsmake/main.rs"

[lib]
name = "rsmake"
path = "crates/rsmake/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_test.rs"

[dependencies]
colored = "2.0.0"
structopt = "0.3"
regex = "1.0"
lazy_static = "1.4"
thiserror = "1.0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
textwrap = "0.14.2"


#[dev-dependencies]
pretty_assertions = "0.6.1"
tempdir = "0.3.7"
