[package]
name = "builder"
version = "0.1.0"
authors = ["Fredrik Sandhei <fredrik.sandhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dependency = { path = "../dependency" }
error      = { path = "../error" }
utility    = { path = "../utility" }
generator  = { path = "../generator" }
mmk_parser = { path = "../mmk_parser" }
regex = "1.3.3"
tempdir = "0.3.7"

#[dev-dependencies]
#tempdir = "0.3.7"