[package]
name = "dependency"
version = "0.1.0"
authors = ["Fredrik Sandhei <fredrik.sandhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error      = { path = "../error" }
mmk_parser = { path = "../mmk_parser" }

[dev-dependencies]
tempdir = "0.3.7"