[package]
name = "mmk_parser"
version = "0.1.0"
authors = ["Fredrik Sandhei <fredrik.sandhei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error    = { path = "../error"   }
utility  = { path = "../utility" }
regex    = "1.4.2"
textwrap = "0.12.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
tempdir = "0.3.7"

